overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
-html, body {overflow-x: hidden !important;}
+html, body {overflow-x: hidden !important;
+}
+body{
+  box-sizing: border-box !important;
+}
 #nav-hero{
   position: relative;
   background-image: url('../public/hero_1.jpg');
